--- a/DemoMaster/public_html/Login.jspx
+++ b/DemoMaster/public_html/Login.jspx
@@ -1,9 +1,12 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <jsp:root xmlns:jsp="http://java.sun.com/JSP/Page" version="2.1" xmlns:f="http://java.sun.com/jsf/core"
-          xmlns:af="http://xmlns.oracle.com/adf/faces/rich">
+          xmlns:af="http://xmlns.oracle.com/adf/faces/rich"
+          xmlns:c="http://java.sun.com/jsp/jstl/core">
+  <c:set var="demomasterBundle"
+         value="#{adfBundle['oracle.apps.uikit.DemoMasterBundle']}"/>          
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <f:view>
-        <af:document title="Login xxyyzz" id="d1">
+        <af:document title="#{demomasterBundle.ANMELDUNG}" id="d1">
             <af:messages id="m1"/>
             <af:form id="f1">
                 <af:pageTemplate viewId="/oracle/apps/uikit/common/pageTemplates/SimpleUIShell.jspx" id="pt1">
@@ -19,7 +22,7 @@
                             <f:facet name="center">
                                 <af:panelFormLayout id="pfl1">
                                     <f:facet name="footer"/>
-                                    <af:outputText value="Bitte melden Sie sich an" id="ot1"/>
+                                    <af:outputText value="#{demomasterBundle.ANMELDETEXT}" id="ot1"/>
                                     <af:inputText label="Name" id="it1" value="#{sessionScope.loggedInUserName}"/>
                                     <af:inputText label="Passwort" id="it2"
                                                   value="#{bindings.userPassword1.inputValue}" secret="true"/>
